# gh-templates

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  git-cliff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  community_collaboration.yml  documentation.yml  test.yml
.github/workflows/: auto-version.yml  build.yml  clean-issue-optional-fields.yml  deploy-docs.yml  release_automation.yml  update-changelog.yml  update-readme-version.yml  update_changelog.yml  verify-templates.yml
docs/: README.md  WORKFLOW_TROUBLESHOOTING.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: installation.md  intro.md  usage.md
install/: README.md  install.ps1  install.sh
scripts/: install_issue_template.sh
src/: main.rs
src/commands/: add.rs  base.rs  issue.rs  license.rs  list.rs  mod.rs  preview.rs
src/utils/: cache.rs  file.rs  get_comment.rs  manifest_navigator.rs  mod.rs  pattern.rs  pretty_print.rs  progress.rs  remote.rs  template_args_parser.rs
templates/: CODE_OF_CONDUCT.md
templates/ISSUE_TEMPLATE/: bug_report.yml  developer_xp_feedback.yml  feature_request.yml  support_question.yml  testing_issue.yml
templates/PULL_REQUEST_TEMPLATE/: 01-bug.md  04-community-collaboration.md  05-developer-experience-feedback.md  default.md
templates/ci-templates/: manifest.yml
templates/issue-templates/: bug.yml  community.yml  docs.yml  dx.yml  feature.yml  manifest.yml  security.yml  support.yml  test.yml
tests/: common.rs  integration.rs  verify_templates.rs
(+105 files in other folders)
