[package]

name = "gh-templates"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "stream", "blocking", "rustls-tls"] }
serde_json = "1.0.140"
syntect = "5.2.0"
openssl = { version = "0.10", features = ["vendored"] }
indicatif = "0.17.12"
