[package]

name = "gh-templates"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "stream", "blocking", "rustls-tls"] }
serde_json = "1.0.140"
syntect = "5.2.0"
openssl = { version = "0.10", features = ["vendored"] }
indicatif = "0.17.11"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
clap_mangen = "0.2.28"
regex = "1.11.1"
serde_yaml = "0.9.34"

[build-dependencies]
regex = "1.11.1"

